sumo/tests/netconvert/errors/errors/broken_edge/edge#length__false4/errors.netconvert
Error: Not numeric value for length in edge '4'.
Quitting (on error).
